# deep-learning-notes

./: .gitattributes  .gitignore  .nojekyll  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README-zh.md  README.md  SECURITY.md  _quarto-html.yml  _quarto-jupyter.yml  _quarto-typst-en.yml  _quarto-typst-zh.yml  _quarto.yml  architecture-zh.md  architecture.md  clean_jupyter_cache.py  colab-setup.sh  index.html  index.qmd  pyproject.toml  references.bib  refs-article.bib  refs-media.bib  requirements.txt  robots.txt  ruff.toml  search.json  sitemap.xml  styles.css
dnnl/: README.md  pyproject.toml  ruff.toml
dnnl/dnnl/: __init__.py
dnnl/dnnl/ch10/: __init__.py  flash_attn_v1.py
dnnl/dnnl/ch13/: __init__.py  autoencoder.py  vae.py
dnnl/dnnl/ch14/: __init__.py  scheduler.py  unet.py
dnnl/dnnl/ch8/: __init__.py  attention.py  positional_encoding.py
dnnl/dnnl/models/: __init__.py
dnnl/dnnl/nn/: __init__.py  attention.py  autoencoder.py  diffusion.py  positional_encoding.py  transformer.py  unet.py
dnnl/src/dnnl/: __init__.py  pylabtools.py  trainingtools.py
dnnl/tests/: test_ch10.py  test_ch13.py  test_ch14.py  test_ch8.py  test_nn_attention.py  test_nn_autoencoder.py  test_nn_diffusion.py  test_nn_flash_attention.py  test_nn_transformer.py
dnnl/tests/models/: test_diffusion.py  test_mlp.py  test_seq2seq.py  test_vae.py  test_vit.py
dnnl/tests/nn/: test_activation.py  test_exports.py  test_loss.py
dnnl/tests/optim/: test_adadelta.py  test_adagrad.py  test_adam.py  test_adamw.py  test_adaptive_weight_decay.py  test_defaults.py  test_muon.py  test_rmsprop.py  (+2 more)
(+474 files in other folders)
