[project]
name = "dnnl"
version = "2026.05.16"
keywords = ["deep learning", "quarto", "tutorial"]
description = "Deep Learning Notes Library"
authors = [{ name = "jshn9515", email = "jshn9510@gmail.com" }]
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    'numpy>=2.4.0',
    'torch>=2.10.0',
]

[project.optional-dependencies]
test = ['pytest>=9.0.0']

[project.urls]
Homepage = "https://github.com/jshn9515/deep-learning-notes"

[tool.uv.sources]
torch = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
